--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
   overflow: hidden;
 }
 
-/* Başlık */
 h1 {
   color: #ff4b8b;
   font-size: 2.5rem;
@@ -22,7 +21,6 @@ h1 {
   animation: fadeDown 1.2s ease;
 }
 
-/* Ana kutu */
 .container {
   display: flex;
   flex-direction: column;
@@ -38,10 +36,16 @@ h1 {
   animation: fadeUp 1.5s ease;
 }
 
-/* Input ve Select */
+.input_group {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+
 select,
 input {
-  width: 100%;
+  flex: 1;
   padding: 12px 18px;
   margin: 10px 0;
   border: 2px solid transparent;
@@ -55,16 +59,14 @@ input {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
 }
 
-/* Hover Efekti */
 select:hover,
 input:hover {
   border: 2px solid #ff4b8b;
   background: rgba(40, 40, 40, 1);
-  box-shadow: 0 0 15px #ff4b8b, 0 0 30px rgba(255, 75, 139, 0.6);
+  box-shadow: 0 0 15px #ff4b8b, 0 0 30px rgba(247, 36, 110, 0.6);
   transform: translateY(-3px);
 }
 
-/* Sonuç inputu */
 input[readonly] {
   background-color: rgba(60, 60, 60, 0.9);
   font-weight: bold;
@@ -72,23 +74,33 @@ input[readonly] {
   text-align: center;
 }
 
-/* Menü */
-.menu {
+.swap-container {
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 12px;
-  margin-top: 15px;
+  margin: 15px 0;
 }
 
-#converter_choices {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 25px;
+#swapBtn i {
+  font-size: 1.5rem;
+  color: wheat;
+}
+#swapBtn {
+  background: #ff4b8b;
+  color: white;
+  border: none;
+  padding: 12px 16px;
+  font-size: 1.2rem;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: 0.4s ease;
+  box-shadow: 0 0 15px rgba(255, 75, 139, 0.7);
 }
 
-/* Animasyonlar */
+#swapBtn:hover {
+  background: #ff1e68;
+  transform: rotate(180deg);
+}
+
 @keyframes fadeDown {
   from {
     opacity: 0;
